rec visibility fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,10 @@ ul {
     margin: 0;
     padding: 0;
     list-style: none;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
 }
 
 picture {
