--- a/styles/variables.css
+++ b/styles/variables.css
@@ -24,6 +24,9 @@
     --letter-spacing-medium: 0.1rem;
     --letter-spacing-large: 0.2rem;
     --letter-spacing-focus: 0.3rem;
+
+    --rec-display: block;
+    --rec-visibility: visible;
 }
 
 @media (min-width: 768px) {
